ruby.h: suppress warnings

* include/ruby/ruby.h (rb_float_value): suppress warnings.
  [ruby-core:47406][Bug #6971]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@36890 b2dd03c8-39d4-4d8f-98ff-823fe69b080e